@@ -1,7 +1,11 @@
 package com.kjs990114.goodong.adapter.out.persistence.mysql.mapper;
 
-import com.kjs990114.goodong.adapter.out.persistence.mysql.entity.*;
-import com.kjs990114.goodong.domain.post.*;
+import com.kjs990114.goodong.adapter.out.persistence.mysql.entity.ModelEntity;
+import com.kjs990114.goodong.adapter.out.persistence.mysql.entity.PostEntity;
+import com.kjs990114.goodong.adapter.out.persistence.mysql.entity.TagEntity;
+import com.kjs990114.goodong.domain.post.Model;
+import com.kjs990114.goodong.domain.post.Post;
+import com.kjs990114.goodong.domain.post.Tag;
 
 import java.util.stream.Collectors;
 
@@ -12,7 +16,7 @@ public class PostMapper {
                 .postId(postEntity.getPostId())
                 .title(postEntity.getTitle())
                 .content(postEntity.getContent())
-                .user(UserMapper.toDomain(postEntity.getUser()))
+                .userId(postEntity.getUserId())
                 .status(postEntity.getStatus())
                 .createdAt(postEntity.getCreatedAt())
                 .lastModifiedAt(postEntity.getLastModifiedAt())
@@ -22,38 +26,23 @@ public class PostMapper {
                                 .version(modelEntity.getVersion())
                                 .fileName(modelEntity.getFileName())
                                 .commitMessage(modelEntity.getCommitMessage())
-                                .post(Post.of(modelEntity.getPost().getPostId()))
-                                .build()).collect(Collectors.toList()))
-                .comments(postEntity.getComments().stream().map(
-                        commentEntity -> Comment.builder()
-                                .commentId(commentEntity.getCommentId())
-                                .content(commentEntity.getContent())
-                                .createdAt(commentEntity.getCreatedAt())
-                                .lastModifiedAt(commentEntity.getLastModifiedAt())
-                                .post(Post.of(commentEntity.getPost().getPostId()))
-                                .user(UserMapper.toDomain(commentEntity.getUser()))
-                                .build()).collect(Collectors.toList()))
-                .likes(postEntity.getLikes().stream().map(
-                        likeEntity -> Like.builder()
-                                .likeId(likeEntity.getLikeId())
-                                .user(UserMapper.toDomain(likeEntity.getUser()))
-                                .post(Post.of(likeEntity.getPost().getPostId()))
+                                .post(Post.of(postEntity.getPostId(), postEntity.getUserId()))
                                 .build()).collect(Collectors.toList()))
                 .tags(postEntity.getTags().stream().map(
                         tagEntity -> Tag.builder()
                                 .tagId(tagEntity.getTagId())
-                                .post(Post.of(tagEntity.getPost().getPostId()))
                                 .tag(tagEntity.getTag())
+                                .post(Post.of(postEntity.getPostId(), postEntity.getUserId()))
                                 .build()).collect(Collectors.toList()))
                 .build();
     }
 
-    public static PostEntity toEntity(Post post, UserEntity userEntity) {
+    public static PostEntity toEntity(Post post) {
         PostEntity postEntity = PostEntity.builder()
                 .postId(post.getPostId())
                 .title(post.getTitle())
                 .content(post.getContent())
-                .user(userEntity)
+                .userId(post.getUserId())
                 .status(post.getStatus())
                 .build();
 
@@ -66,27 +55,12 @@ public class PostMapper {
                         .fileName(model.getFileName())
                         .build()).toList());
 
-        postEntity.setComments(post.getComments().stream().map(
-                comment -> CommentEntity.builder()
-                        .commentId(comment.getCommentId())
-                        .post(postEntity)
-                        .user(userEntity)
-                        .content(comment.getContent())
-                        .build()).toList());
-
-        postEntity.setLikes(post.getLikes().stream().map(
-                like -> LikeEntity.builder()
-                        .likeId(like.getLikeId())
-                        .post(postEntity)
-                        .user(userEntity)
-                        .build()).toList());
-
         postEntity.setTags(post.getTags().stream().map(
                 tag -> TagEntity.builder()
                         .tagId(tag.getTagId())
-                        .post(postEntity)
                         .tag(tag.getTag())
-                        .build()).toList());
+                        .post(postEntity)
+                        .build()).collect(Collectors.toList()));
 
         return postEntity;
     }
